name:                haystack
version:             0.1.0.0
synopsis:            The haskell web stack
description:         The haskell web stack
homepage:            http://github.com/ajnsit/haystack
license:             MIT
license-file:        LICENSE
author:              Anupam Jain
maintainer:          ajnsit@gmail.com
copyright:           Copyright (C) 2015. Anupam Jain. All Rights Reserved.
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18

library
  hs-source-dirs:      src
  exposed-modules:     Haystack.Lib
  build-depends:       base       >= 4.7   && < 5
                     , dyre       >= 0.8   && < 0.9
                     , wai-routes >= 0.9.3 && < 0.10
  default-language:    Haskell2010

executable haystack
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haystack
  default-language:    Haskell2010

test-suite haystack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haystack
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ajnsit/haystack
